--- a/AAAReclamsO/Base.lproj/Main.storyboard
+++ b/AAAReclamsO/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Tab Bar Controller-->
@@ -133,16 +134,44 @@
                                                                 <action selector="addRemovePressed:" destination="kC5-rp-BdD" eventType="touchUpInside" id="T2q-ZR-EIG"/>
                                                             </connections>
                                                         </button>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U38-eG-bVg" userLabel="badgeView">
+                                                            <rect key="frame" x="59" y="2" width="25" height="25"/>
+                                                            <subviews>
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="badge2.png" translatesAutoresizingMaskIntoConstraints="NO" id="Udz-vf-v57">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="9" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ogi-N0-iFF">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="25" id="A9B-ei-ae3"/>
+                                                                <constraint firstItem="Udz-vf-v57" firstAttribute="leading" secondItem="U38-eG-bVg" secondAttribute="leading" id="J7J-xk-GW0"/>
+                                                                <constraint firstAttribute="bottom" secondItem="Udz-vf-v57" secondAttribute="bottom" id="Scc-6f-sHK"/>
+                                                                <constraint firstAttribute="width" constant="25" id="TNI-lm-68q"/>
+                                                                <constraint firstAttribute="trailing" secondItem="Udz-vf-v57" secondAttribute="trailing" id="Xed-mU-L0M"/>
+                                                                <constraint firstItem="Udz-vf-v57" firstAttribute="top" secondItem="U38-eG-bVg" secondAttribute="top" id="gvq-EY-rTM"/>
+                                                            </constraints>
+                                                        </view>
                                                     </subviews>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 </view>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="centerY" secondItem="EqX-oF-g3d" secondAttribute="centerY" id="6tk-iV-Sgt"/>
+                                                    <constraint firstItem="U38-eG-bVg" firstAttribute="top" secondItem="kC5-rp-BdD" secondAttribute="top" constant="2" id="O59-aN-9ZB"/>
+                                                    <constraint firstAttribute="trailing" secondItem="U38-eG-bVg" secondAttribute="trailing" constant="2" id="Xpr-VJ-n0W"/>
                                                     <constraint firstAttribute="centerX" secondItem="EqX-oF-g3d" secondAttribute="centerX" id="lrc-8V-yk1"/>
                                                 </constraints>
                                                 <connections>
                                                     <outlet property="addRemoveBtn" destination="def-Io-PXP" id="rUk-yJ-ka4"/>
+                                                    <outlet property="badgeView" destination="U38-eG-bVg" id="Uv1-XT-ntr"/>
+                                                    <outlet property="badgeViewBg" destination="Udz-vf-v57" id="FBq-Pu-B9e"/>
+                                                    <outlet property="badgeViewLabel" destination="ogi-N0-iFF" id="KNi-bB-oiE"/>
                                                     <outlet property="logoImgView" destination="EqX-oF-g3d" id="kw4-MJ-c3o"/>
                                                     <outlet property="selectBtn" destination="dSv-Wv-eut" id="iuW-gE-4Ai"/>
                                                 </connections>
@@ -442,6 +471,34 @@
                                     <constraint firstAttribute="height" constant="30" id="gdp-35-edw"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4kb-VH-gPv" userLabel="newView">
+                                <rect key="frame" x="244" y="0.0" width="60" height="60"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="new_badge.png" translatesAutoresizingMaskIntoConstraints="NO" id="Zrk-TG-Dlu">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H7n-jP-VpE">
+                                        <rect key="frame" x="10" y="20" width="42" height="21"/>
+                                        <attributedString key="attributedText">
+                                            <fragment content="NOU">
+                                                <attributes>
+                                                    <color key="NSColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <font key="NSFont" size="17" name="HelveticaNeue-Bold"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                        <nil key="highlightedColor"/>
+                                        <color key="shadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <size key="shadowOffset" width="0.0" height="0.0"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="J5u-W5-Q8y"/>
+                                    <constraint firstAttribute="width" constant="60" id="TcK-Y0-sPf"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T3b-25-tZs" userLabel="spinner view">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <subviews>
@@ -524,9 +581,11 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="qcP-3i-5Ko" firstAttribute="leading" secondItem="cvK-JU-ARK" secondAttribute="leading" id="3Gt-W7-Gy5"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="4kb-VH-gPv" secondAttribute="trailing" id="MFF-pL-T9h"/>
                             <constraint firstItem="IAa-8M-9Lg" firstAttribute="top" secondItem="abi-aW-6Zb" secondAttribute="bottom" constant="3" id="MWC-Lh-ifg"/>
                             <constraint firstAttribute="trailing" secondItem="T3b-25-tZs" secondAttribute="trailing" id="Mrp-AC-1Dh"/>
                             <constraint firstItem="abi-aW-6Zb" firstAttribute="leading" secondItem="cvK-JU-ARK" secondAttribute="leading" id="R7i-L0-oGK"/>
+                            <constraint firstItem="4kb-VH-gPv" firstAttribute="top" secondItem="cvK-JU-ARK" secondAttribute="top" id="TWK-XB-GJ5"/>
                             <constraint firstAttribute="trailing" secondItem="Tlq-bV-F4K" secondAttribute="trailing" id="ULC-pv-C5a"/>
                             <constraint firstAttribute="trailing" secondItem="qcP-3i-5Ko" secondAttribute="trailing" id="XMv-2I-ykN"/>
                             <constraint firstItem="IAa-8M-9Lg" firstAttribute="top" secondItem="qcP-3i-5Ko" secondAttribute="bottom" id="Zri-I3-qES"/>
@@ -545,6 +604,9 @@
                         <outlet property="fromToDistanceToBottomConstraint" destination="MWC-Lh-ifg" id="LfA-5D-hVJ"/>
                         <outlet property="fromToLabel" destination="D5b-dG-TjH" id="CAC-rY-zsr"/>
                         <outlet property="gadBannerViewContainer" destination="qcP-3i-5Ko" id="GhJ-FM-VQP"/>
+                        <outlet property="newView" destination="4kb-VH-gPv" id="tPf-dv-pbh"/>
+                        <outlet property="newViewImage" destination="Zrk-TG-Dlu" id="bcr-8Y-x1j"/>
+                        <outlet property="newViewLabel" destination="H7n-jP-VpE" id="c9E-r7-Jfp"/>
                         <outlet property="progressLabel" destination="CwN-co-slu" id="3mn-mm-J2G"/>
                         <outlet property="progressView" destination="Neq-bN-oEZ" id="Szk-Im-Hk8"/>
                         <outlet property="progressViewBgImage" destination="Zz1-wv-Yk5" id="sl5-4w-QVL"/>
@@ -631,19 +693,11 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <accessibility key="accessibilityConfiguration" label="acces"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HlS-Nb-UZ6" userLabel="bannerSuperView">
-                                <rect key="frame" x="0.0" y="518" width="320" height="50"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="bde-6a-Ksl"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Cgf-lv-7Z0" firstAttribute="bottom" secondItem="nKE-wH-PAu" secondAttribute="bottom" constant="49" id="2uK-cr-ltm"/>
                             <constraint firstItem="eaJ-Lg-Ps1" firstAttribute="top" secondItem="nKE-wH-PAu" secondAttribute="bottom" constant="49" id="344-mW-v13" userLabel="Vertical Space - (49) - Bottom Layout Guide - spinner view#3"/>
-                            <constraint firstItem="HlS-Nb-UZ6" firstAttribute="leading" secondItem="cbQ-zC-8jm" secondAttribute="leading" id="3Zl-c6-kZr"/>
                             <constraint firstAttribute="trailing" secondItem="nKE-wH-PAu" secondAttribute="trailing" id="AQu-Wh-mlJ" userLabel="Horizontal Space - View - spinner view#3"/>
                             <constraint firstItem="eaJ-Lg-Ps1" firstAttribute="top" secondItem="B7P-Mi-vNc" secondAttribute="bottom" id="BBX-hF-MeD" userLabel="Vertical Space - Bottom Layout Guide - overlay#3"/>
                             <constraint firstItem="LKG-f1-TFg" firstAttribute="height" secondItem="cbQ-zC-8jm" secondAttribute="height" id="DFF-f4-ehj"/>
@@ -657,8 +711,6 @@
                             <constraint firstItem="Cgf-lv-7Z0" firstAttribute="trailing" secondItem="nKE-wH-PAu" secondAttribute="trailing" id="loS-ht-SN8"/>
                             <constraint firstItem="Cgf-lv-7Z0" firstAttribute="top" secondItem="nKE-wH-PAu" secondAttribute="top" id="mX5-bS-Mqb"/>
                             <constraint firstItem="B7P-Mi-vNc" firstAttribute="top" secondItem="cbQ-zC-8jm" secondAttribute="top" id="nJ2-0f-zlF" userLabel="Vertical Space - overlay - View#3"/>
-                            <constraint firstAttribute="trailing" secondItem="HlS-Nb-UZ6" secondAttribute="trailing" id="nXN-e2-3Ij"/>
-                            <constraint firstItem="eaJ-Lg-Ps1" firstAttribute="top" secondItem="HlS-Nb-UZ6" secondAttribute="bottom" id="o8m-3C-J6s"/>
                             <constraint firstItem="LKG-f1-TFg" firstAttribute="width" secondItem="cbQ-zC-8jm" secondAttribute="width" id="t5c-XH-Pva"/>
                             <constraint firstItem="Cgf-lv-7Z0" firstAttribute="bottom" secondItem="eaJ-Lg-Ps1" secondAttribute="top" id="tZ1-iI-w6T"/>
                             <constraint firstItem="Cgf-lv-7Z0" firstAttribute="top" secondItem="cbQ-zC-8jm" secondAttribute="top" id="yAy-91-9x5"/>
@@ -666,7 +718,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="uqv-kR-Jah"/>
                     <connections>
-                        <outlet property="bannerSuperView" destination="HlS-Nb-UZ6" id="GmY-GA-VCu"/>
                         <outlet property="overlay" destination="B7P-Mi-vNc" id="77h-TC-KsS"/>
                         <outlet property="page" destination="Ba8-Pk-bQC" id="c4B-xG-vTI"/>
                         <outlet property="pageHConstraint" destination="O7f-UB-lhD" id="s7O-Wj-C4W"/>
@@ -853,6 +904,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="badge2.png" width="78" height="78"/>
         <image name="bg.png" width="320" height="568"/>
         <image name="bottom_bar_bg.png" width="320" height="81"/>
         <image name="bottom_bar_overlay.png" width="320" height="81"/>
@@ -860,6 +912,7 @@
         <image name="lock.png" width="44" height="58"/>
         <image name="lock_highlight.png" width="44" height="58"/>
         <image name="minimize.png" width="64" height="62"/>
+        <image name="new_badge.png" width="158" height="158"/>
         <image name="open_edit.png" width="128" height="128"/>
         <image name="refresh.png" width="128" height="128"/>
         <image name="refresh_highlight.png" width="128" height="128"/>
